fixed search bar input so that if you type something that is longer than the search bar it is not covered up by the search button

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -201,11 +201,9 @@ background-color: rgb(2, 206, 169);
 }
 
 .Search-Field input {
-  width: 40vw;
+  width: 30vw;
   height: 50px;
-    border: none;
-  /* border: 2px solid  #12006B;
-  border-radius: 4px; */
+  border: none;
 }
 
 .Search-Field button{
@@ -243,6 +241,7 @@ flex: 0.1 0 1vh;
   font-size: 1.3rem;
   padding-left: 25px;
   outline:none;
+  padding-right: 60px;
 }
 
 
